feat: add instructions and coderabbit yaml

--- a/.github/.instructions.md
+++ b/.github/.instructions.md
@@ -17,7 +17,7 @@ applyTo: '**/*.py'
 - Use consistent naming conventions and follow language-specific best practices.
 
 ## Python Instructions
-- Use type annotations (PEP 484).
+- Use type annotations (PEP 484) - except in the `tests/` folder.
 - All public functions, methods, and classes **must include [Google-style docstrings](https://google.github.io/styleguide/pyguide.html)**.
 - **Do not add inline comments**; rely on clear code and docstrings instead.
 - Function and variable names must be explicit and intention-revealing.
